--- a/ReportGeneration/pom.xml
+++ b/ReportGeneration/pom.xml
@@ -14,4 +14,18 @@
     <artifactId>report-generation</artifactId>
     <name>ReportGeneration</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
