--- a/ReportGeneration/src/main/resources/application.properties
+++ b/ReportGeneration/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:mysql://localhost/database-access-example
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=
+spring.datasource.password=
