--- a/ReportGeneration/pom.xml
+++ b/ReportGeneration/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-boot-starter.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
