--- a/ReportGeneration/pom.xml
+++ b/ReportGeneration/pom.xml
@@ -15,6 +15,14 @@
     <name>ReportGeneration</name>
 
     <dependencies>
+        <!-- Dependant modules for repository access -->
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>stock</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <!-- Database access -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
